--- a/main.css
+++ b/main.css
@@ -43,5 +43,14 @@ table {
 }
 
 
-body {background: url(linen.jpg) repeat; font-size: 62.5%;};
+body {background: url(linen.jpg) repeat; font-size: 62.5%; font-family: Helvetica, sans-serif; }
+#tdddApp {width: 100%; }
+#tdddApp ul {/*border-right: 0.2em dashed yellow;*/}
+#tdddApp ul:last-child {border-right: none;}
+#tdddApp ul h2 {font-size: 2em; margin: 0.5em; text-align: center; font-variant: small-caps; background-color: rgba(255, 255, 255, 0.1);}
+#tdddApp ul li {width: 10em; height: 10em; float: left; background:#ffc; margin: 1em; padding: 0.6em; box-shadow: 5px 5px 7px rgba(33,33,33,.7);}
+#to-do, #doing, #done {width:33%; display: inline-block; float: left;}
+#tdddApp ul li:nth-child(even){-o-transform:rotate(4deg); -webkit-transform:rotate(4deg); -moz-transform:rotate(4deg); background:#cfc; }
+#tdddApp ul li:nth-child(3n){-o-transform:rotate(-3deg); -webkit-transform:rotate(-3deg); -moz-transform:rotate(-3deg); background:#ccf;}
+
 
