ready to add persistance

--- a/main.css
+++ b/main.css
@@ -45,13 +45,13 @@ table {
 
 html{border-width:25px 25px 45px 25px;-webkit-border-image:url("border.png") 40 40 stretch;border-image:url(border.png) 30 30 round;min-height:100%;}
 body {font-size: 62.5%; font-family: Helvetica, sans-serif; }
-#tdddApp {width: 100%; }
+#tdddApp {width: 100%; height:100% }
 #tdddApp ul {/*border-right: 0.2em dashed yellow;*/}
 #tdddApp ul:last-child {border-right: none;}
 #tdddApp ul h2 {font-size: 2em; margin: 0.5em; text-align: center; /*font-variant: small-caps; */color:black;  font-family:"Delius Unicase","Permanent Marker", cursive;}
 #tdddApp ul li.sticky {position: relative; width: 10em; height: 10em; float: left; margin: 1em; padding: 0 0.6em 0.6em 0.6em; box-shadow: 2px 2px 7px rgba(33,33,33,.2);font-size: 1em;}
-li.ui-state-highlight {position: relative; width: 10em; height: 10em; float: left; padding: 0.6em; font-size: 1em; margin:1em; border: 0.2em dashed #feea3d; }
-#todo-list, #doing-list, #done-list {width:100%; display: inline-block; float: left;}
+li.ui-state-highlight {position: relative; width: 10em; height: 10em; float: left; padding: 0.6em; font-size: 1em; margin:1em; border: 0.2em dashed rgb(128,153,182); }
+#todo-list, #doing-list, #done-list {width:33%; display: inline-block; float: left;}
 #tdddApp>ul>li:nth-child(even){-o-transform:rotate(4deg); -webkit-transform:rotate(4deg); -moz-transform:rotate(4deg); }
 #tdddApp>ul>li:nth-child(3n){-o-transform:rotate(-3deg); -webkit-transform:rotate(-3deg); -moz-transform:rotate(-3deg);}
 
