--- a/main.css
+++ b/main.css
@@ -43,15 +43,12 @@ table {
 }
 
 
-html{border-width:25px 25px 45px 25px;-webkit-border-image:url("border.png") 40 40 stretch;border-image:url(border.png) 30 30 round;min-height:85%;}
+#tdddApp{border-width:30px 30px 60px 30px;border-image:url("border.png") 30 30 60 30 stretch;-moz-border-image:url("border.png") 30 30 60 30 stretch; -webkit-border-image:url("border.png") 30 30 60 30 stretch;}
 body {font-size: 62.5%; font-family: Helvetica, sans-serif; }
-#tdddApp {width: 100%; height:100% }
-#tdddApp ul {/*border-right: 0.2em dashed yellow;*/}
-#tdddApp ul:last-child {border-right: none;}
-#tdddApp ul h2 {font-size: 2em; margin: 0.5em; text-align: center; /*font-variant: small-caps; */color:black;  font-family:"Delius Unicase","Permanent Marker", cursive;}
+#tdddApp ul h2 {font-size: 2em; margin: 0.5em; text-align: center; color:black;  font-family:"Delius Unicase", cursive;}
 #tdddApp ul li.sticky {position: relative; width: 10em; height: 10em; float: left; margin: 1em; padding: 0 0.6em 0.6em 0.6em; box-shadow: 2px 2px 7px rgba(33,33,33,.2);font-size: 1em;overflow-y:auto;overflow-x:hidden;}
 li.ui-state-highlight {position: relative; width: 10em; height: 10em; float: left; padding: 0.6em; font-size: 1em; margin:1em; border: 0.2em dashed rgb(128,153,182);}
-#todo-list, #doing-list, #done-list {width:33%; display: inline-block; float: left; min-height: 500px;}
+#todo-list, #doing-list, #done-list {width:33%; display: inline-block; min-height: 500px;height:100%}
 #tdddApp>ul>li:nth-child(even){-o-transform:rotate(4deg); -webkit-transform:rotate(4deg); -moz-transform:rotate(4deg); }
 #tdddApp>ul>li:nth-child(3n){-o-transform:rotate(-3deg); -webkit-transform:rotate(-3deg); -moz-transform:rotate(-3deg);}
 
@@ -81,7 +78,7 @@ li.sticky textarea {width: 94%; height: 88%; margin-top:0.5em; border-color: #89
 
 #tdddApp ul li.sticky:hover, #tdddApp ul li.sticky:focus{-moz-box-shadow:10px 10px 7px rgba(0,0,0,.3); -webkit-box-shadow: 10px 10px 7px rgba(0,0,0,.3); box-shadow:10px 10px 7px rgba(0,0,0,.3); -webkit-transform: scale(1.25); -moz-transform: scale(1.25); -o-transform: scale(1.25); position:relative; z-index:5;}
 
+.info, .info a{color:grey; text-align:right;}
 
-/*#tdddApp ul li.sticky.ui-sortable-helper:hover { -webkit-transform: scale(1); -moz-transform: scale(1); -o-transform: scale(1);} */
 
 
